@@ -151,6 +151,22 @@ and
 (default). When enabled it expands to
 .Em yes
 and silences make rules defined by zmk.
+.Ss Configure.StaticLibraries
+This variable is controlled by the
+.Nm configure
+script options
+.Em --enable-static
+(default) and
+.Em --disable-static .
+It is stored but not acted upon.
+.Ss Configure.DynamicLibraries
+This variable is controlled by the
+.Nm configure
+script options
+.Em --enable-dynamic
+(default) and
+.Em --disable-dynamic .
+It is stored but not acted upon.
 .Ss Configure.ProgramPrefix
 This variable is set by the
 .Nm configure
